Make GAMMA and DRAW_FOG configurable options

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -1,4 +1,4 @@
-screen = [Post-Processing] shadowMapResolution
-screen.Post-Processing = FOG_DENSITY CONTRAST
+screen = [Post-Processing] shadowMapResolution GAMMA
+screen.Post-Processing = DRAW_FOG FOG_DENSITY CONTRAST
 
-sliders = FOG_DENSITY CONTRAST
+sliders = FOG_DENSITY CONTRAST GAMMA
