Add translucency option WATER_ALPHA for translucent terrain (including water)

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -1,4 +1,4 @@
-screen = [Post-Processing] shadowMapResolution GAMMA
+screen = [Post-Processing] shadowMapResolution GAMMA WATER_ALPHA
 screen.Post-Processing = DRAW_FOG FOG_DENSITY CONTRAST
 
-sliders = FOG_DENSITY CONTRAST GAMMA
+sliders = FOG_DENSITY CONTRAST GAMMA WATER_ALPHA
