Add DRAW_SHADOWS option

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -1,4 +1,5 @@
-screen = [Post-Processing] shadowMapResolution GAMMA WATER_ALPHA
+screen = [Post-Processing] [Shadows] GAMMA WATER_ALPHA
 screen.Post-Processing = DRAW_FOG FOG_DENSITY CONTRAST
+screen.Shadows = DRAW_SHADOWS shadowMapResolution
 
 sliders = FOG_DENSITY CONTRAST GAMMA WATER_ALPHA
